--- a/options/options.css
+++ b/options/options.css
@@ -10,7 +10,7 @@
 
 * {
     box-sizing: border-box;
-    user-select: none;
+    /*user-select: none;*/
     font-family: 'Open Sans', sans-serif!important;
 }
 
